grammar.js
    source_file: ($) =>
      seq(
        optional($.shebang_line),
        optional(
          seq(
            $._top_level_statement,
            repeat(seq($._semi, $._top_level_statement)),
            optional($._semi)
          )
        )
      ),
    _semi: ($) => choice($._implicit_semi, $._explicit_semi),
    simple_identifier: ($) =>
      choice(
        LEXICAL_IDENTIFIER,
        /`[^\r\n`]+`/,
        /\$[0-9]+/,
        token(seq("$", LEXICAL_IDENTIFIER)),
        $._contextual_simple_identifier
      ),
    // Keywords that were added after they were already legal as identifiers. `tree-sitter` will prefer exact matches
    // when parsing so unless we explicitly say that these are legal, the parser will interpret them as their keyword.
    _contextual_simple_identifier: ($) =>
      choice(
        "actor",
        "async",
        "consume",
        "copy",
        "discard",
        "each",
        "lazy",
        "repeat",
        "package",
        "unsafe",
        $._parameter_ownership_modifier
      ),
    integer_literal: ($) => token(seq(optional(/[1-9]/), DEC_DIGITS)),
    boolean_literal: ($) => choice("true", "false"),
    line_string_literal: ($) =>
      seq(
        '"',
        repeat(choice(field("text", $._line_string_content), $._interpolation)),
        '"'
      ),
    _line_string_content: ($) => choice($.line_str_text, $.str_escaped_char),
    _interpolation: ($) => seq("\\(", $._interpolation_contents, ")"),
    type_annotation: ($) =>
      seq(":", field("type", $._possibly_implicitly_unwrapped_type)),
    _possibly_implicitly_unwrapped_type: ($) =>
      seq($._type, optional(token.immediate("!"))),
    _type: ($) =>
      prec.right(
        PRECS.ty,
        seq(optional($.type_modifiers), field("name", $._unannotated_type))
      ),
    _unannotated_type: ($) =>
      prec.right(
        PRECS.ty,
        choice(
          $.user_type,
          $.tuple_type,
          $.function_type,
          $.array_type,
          $.dictionary_type,
          $.optional_type,
          $.metatype,
          $.bracket_qualified_type,
          $.opaque_type,
          $.existential_type,
          $.protocol_composition_type,
          $.type_parameter_pack,
          $.type_pack_expansion,
          $.suppressed_constraint
        )
      ),
    // The grammar just calls this whole thing a `type-identifier` but that's a bit confusing.
    user_type: ($) => sep1($._simple_user_type, $._dot),
    _simple_user_type: ($) =>
      prec.right(
        PRECS.ty,
        seq(
          alias($.simple_identifier, $.type_identifier),
          optional($.type_arguments)
        )
      ),
    tuple_type: ($) =>
      choice(
        seq(
          "(",
          optional(sep1Opt(field("element", $.tuple_type_item), ",")),
          ")"
        ),
        alias($._parenthesized_type, $.tuple_type_item)
      ),
    function_type: ($) =>
      seq(
        field("params", choice($.tuple_type, $._unannotated_type)),
        optional($._async_keyword),
        optional(choice($.throws_clause, $.throws)),
        $._arrow_operator,
        field("return_type", $._type)
      ),
    array_type: ($) =>
      choice(
        seq("[", field("element", $._type), "]"),
        seq(
          "[",
          field("count", choice($.integer_literal, $.simple_identifier)),
          "of",
          field("element", $._type),
          "]"
        )
      ),
    dictionary_type: ($) =>
      seq("[", field("key", $._type), ":", field("value", $._type), "]"),
    optional_type: ($) =>
      prec.left(
        seq(
          field(
            "wrapped",
            choice(
              $.user_type,
              $.tuple_type,
              $.array_type,
              $.dictionary_type,
              $.bracket_qualified_type
            )
          ),
          repeat1(
            choice(
              alias($._immediate_quest, "?"),
              // The scanner keeps an immediate `??` type suffix distinct from a
              // nil-coalescing operator that follows whitespace.
              alias($._double_optional, "??")
            )
          )
        )
      ),
    _immediate_quest: ($) => token.immediate("?"),
    _expression: ($) =>
      prec(
        PRECS.expr,
        choice(
          $.simple_identifier,
          $._unary_expression,
          $._binary_expression,
          $.ternary_expression,
          $._primary_expression,
          $.if_statement,
          $.switch_statement,
          $.assignment,
          $.value_parameter_pack,
          $.value_pack_expansion,
          seq($._expression, alias($._immediate_quest, "?"))
        )
      ),
    // Unary expressions
    _parenthesized_type: ($) =>
      seq(
        "(",
        field(
          "element",
          choice($.opaque_type, $.existential_type, $.dictionary_type)
        ),
        ")"
      ),
    navigation_expression: ($) =>
      prec.left(
        PRECS.navigation,
        seq(
          field(
            "target",
            choice(
              $._navigable_type_expression,
              $._expression,
              $._parenthesized_type
            )
          ),
          field("suffix", $.navigation_suffix)
        )
      ),
    _navigable_type_expression: ($) =>
      choice($.user_type, $.array_type, $.dictionary_type),
    prefix_expression: ($) =>
      prec.left(
        PRECS.prefix_operations,
        seq(
          field("operation", $._prefix_unary_operator),
          field(
            "target",
            choice(
              $._expression,
              alias(choice("async", "if", "switch"), $._expression)
            )
          )
        )
      ),
    additive_expression: ($) =>
      prec.left(
        PRECS.addition,
        seq(
          field("lhs", $._expression),
          field("op", $._additive_operator),
          field("rhs", $._expression)
        )
      ),
    infix_expression: ($) =>
      prec.left(
        PRECS.infix_operations,
        seq(
          field("lhs", $._expression),
          field("op", $.custom_operator),
          field("rhs", $._expr_hack_at_ternary_binary_suffix)
        )
      ),
    nil_coalescing_expression: ($) =>
      prec.right(
        PRECS.nil_coalescing,
        seq(
          field("value", $._expression),
          $._nil_coalescing_operator,
          field("if_nil", $._expr_hack_at_ternary_binary_suffix)
        )
      ),
    custom_operator: ($) => choice(token(/[\/]+[*]+/), $._custom_operator),
    // Suffixes
    navigation_suffix: ($) =>
      seq(
        $._dot,
        field("suffix", choice($.simple_identifier, $.integer_literal))
      ),
    call_suffix: ($) =>
      prec(
        PRECS.call_suffix,
        choice(
          $.value_arguments,
          prec.dynamic(-1, $._fn_call_lambda_arguments), // Prefer to treat `foo() { }` as one call not two
          seq($.value_arguments, $._fn_call_lambda_arguments)
        )
      ),
    _fn_call_lambda_arguments: ($) =>
      sep1($.lambda_literal, seq(field("name", $.simple_identifier), ":")),
    type_arguments: ($) =>
      prec.left(
        seq("<", sep1Opt(choice($._type, $.integer_literal), ","), ">")
      ),
    value_arguments: ($) =>
      seq(
        choice(
          seq("(", optional(sep1Opt($.value_argument, ",")), ")"),
          seq("[", optional(sep1Opt($.value_argument, ",")), "]")
        )
      ),
    value_argument: ($) =>
      prec.left(
        seq(
          optional($.type_modifiers),
          choice(
            repeat1(
              seq(field("reference_specifier", $.value_argument_label), ":")
            ),
            seq(
              optional(seq(field("name", $.value_argument_label), ":")),
              field("value", $._expression)
            )
          )
        )
      ),
    _expr_hack_at_ternary_binary_suffix: ($) =>
      prec.left(
        PRECS.ternary_binary_suffix,
        choice(
          $._expression,
          alias($.expr_hack_at_ternary_binary_call, $.call_expression)
        )
      ),
    call_expression: ($) =>
      prec(
        PRECS.call,
        prec.dynamic(DYNAMIC_PRECS.call, seq($._expression, $.call_suffix))
      ),
    tuple_expression: ($) =>
      prec.right(
        PRECS.tuple,
        seq(
          "(",
          sep1Opt(
            seq(
              optional(seq(field("name", $.simple_identifier), ":")),
              field("value", $._expression)
            ),
            ","
          ),
          ")"
        )
      ),
    array_literal: ($) =>
      seq("[", optional(sep1Opt(field("element", $._expression), ",")), "]"),
    dictionary_literal: ($) =>
      seq(
        "[",
        choice(":", sep1Opt($._dictionary_literal_item, ",")),
        optional(","),
        "]"
      ),
    _dictionary_literal_item: ($) =>
      seq(field("key", $._expression), ":", field("value", $._expression)),
    lambda_literal: ($) =>
      prec.left(
        PRECS.lambda,
        seq(
          choice("{", "^{"),
          optional($._lambda_type_declaration),
          optional($.statements),
          "}"
        )
      ),
    _lambda_type_declaration: ($) =>
      seq(
        repeat($.attribute),
        prec(PRECS.expr, optional(field("captures", $.capture_list))),
        optional(field("type", $.lambda_function_type)),
        "in"
      ),
    capture_list: ($) => seq("[", sep1Opt($.capture_list_item, ","), "]"),
    lambda_function_type: ($) =>
      prec(
        PRECS.expr,
        seq(
          choice(
            $.lambda_function_type_parameters,
            seq("(", optional($.lambda_function_type_parameters), ")")
          ),
          optional($._async_keyword),
          optional(choice($.throws_clause, $.throws)),
          optional(
            seq(
              $._arrow_operator,
              optional($.parameter_modifiers),
              field("return_type", $._possibly_implicitly_unwrapped_type)
            )
          )
        )
      ),
    lambda_function_type_parameters: ($) => sep1Opt($.lambda_parameter, ","),
    self_expression: ($) => "self",
    _three_dot_operator: ($) => alias("...", "..."), // Weird alias to satisfy highlight queries
    _additive_operator: ($) =>
      choice(
        alias($._plus_then_ws, "+"),
        alias($._minus_then_ws, "-"),
        "+",
        "-"
      ),
    // The `/` operator conflicts with a regex literal (which itself appears to conflict with a
    // comment, for some reason), so we must give it equivalent token precedence.
    _prefix_unary_operator: ($) =>
      prec.right(
        choice(
          "++",
          "--",
          "-",
          "+",
          $.bang,
          "&",
          "~",
          $._dot,
          $.custom_operator
        )
      ),
    statements: ($) =>
      seq(
        $._local_statement,
        repeat(seq($._semi, $._local_statement)),
        optional($._semi)
      ),
    _local_statement: ($) =>
      choice(
        $._expression,
        $._local_declaration,
        $._labeled_statement,
        $.control_transfer_statement
      ),
    _top_level_statement: ($) =>
      choice(
        $._expression,
        $._global_declaration,
        $._labeled_statement,
        $._throw_statement
      ),
    _block: ($) => prec(PRECS.block, seq("{", optional($.statements), "}")),
    control_transfer_statement: ($) =>
      choice(
        prec.right(PRECS.control_transfer, $._throw_statement),
        prec.right(
          PRECS.control_transfer,
          seq(
            $._optionally_valueful_control_keyword,
            field("result", optional($._expression))
          )
        )
      ),
    _throw_statement: ($) => seq($.throw_keyword, $._expression),
    _optionally_valueful_control_keyword: ($) =>
      choice("return", "continue", "break", "yield"),
    property_declaration: ($) =>
      seq(optional($.modifiers), $._modifierless_property_declaration),
    _modifierless_property_declaration: ($) =>
      prec.right(
        seq(
          $._possibly_async_binding_pattern_kind,
          sep1($._single_modifierless_property_declaration, ",")
        )
      ),
    function_declaration: ($) =>
      prec.right(
        seq($._bodyless_function_declaration, field("body", $.function_body))
      ),
    _bodyless_function_declaration: ($) =>
      seq(
        optional($.modifiers),
        optional("class"), // XXX: This should be possible in non-last position, but that creates parsing ambiguity
        $._modifierless_function_declaration_no_body
      ),
    function_body: ($) => $._block,
    type_parameters: ($) =>
      seq(
        "<",
        sep1Opt($.type_parameter, ","),
        optional($.type_constraints),
        ">"
      ),
    type_parameter: ($) =>
      seq(
        optional($.type_parameter_modifiers),
        optional("let"),
        $._type_parameter_possibly_packed,
        optional(seq(":", $._type))
      ),
    _type_parameter_possibly_packed: ($) =>
      choice(
        alias($.simple_identifier, $.type_identifier),
        $.type_parameter_pack
      ),

    parameter: ($) =>
      seq(
        optional(field("external_name", $.simple_identifier)),
        field("name", $.simple_identifier),
        ":",
        optional($.parameter_modifiers),
        field("type", $._possibly_implicitly_unwrapped_type),
        optional($._three_dot_operator)
      ),
    _referenceable_operator: ($) =>
      choice(
        $.custom_operator,
        $._comparison_operator,
        $._additive_operator,
        $._multiplicative_operator,
        $._equality_operator,
        $._comparison_operator,
        $._assignment_and_operator,
        "++",
        "--",
        $.bang,
        "~",
        "|",
        "^",
        "<<",
        ">>",
        "&"
      ),
    // Hide the fact that certain symbols come from the custom scanner by aliasing them to their
    // string variants. This keeps us from having to see them in the syntax tree (which would be
    // noisy) but allows callers to refer to them as nodes by their text form like with any
    // operator.
    _dot: ($) => alias($._dot_custom, "."),
    _arrow_operator: ($) => alias($._arrow_operator_custom, "->"),
    _nil_coalescing_operator: ($) =>
      alias($._nil_coalescing_operator_custom, "??"),
    _double_optional: ($) => alias($._double_optional_custom, "??"),
    _async_keyword: ($) => alias($._async_keyword_custom, "async"),
    operator_declaration: ($) =>
      seq(
        choice("prefix", "infix", "postfix"),
        "operator",
        $._referenceable_operator,
        optional(seq(":", $.simple_identifier)),
        optional($.deprecated_operator_declaration_body)
      ),
    // The Swift compiler no longer accepts these, but some very old code still uses it.
    precedence_group_declaration: ($) =>
      seq(
        "precedencegroup",
        $.simple_identifier,
        "{",
        optional($.precedence_group_attributes),
        "}"
      ),
    precedence_group_attributes: ($) => repeat1($.precedence_group_attribute),
    precedence_group_attribute: ($) =>
      seq(
        $.simple_identifier,
        ":",
        choice($.simple_identifier, $.boolean_literal)
      ),
    attribute: ($) =>
      seq(
        "@",
        $.user_type,
        // attribute arguments are a mess of special cases, maybe this is good enough?
        optional(seq("(", optional(sep1Opt($._attribute_argument, ",")), ")"))
      ),
    value_binding_pattern: ($) => field("mutability", choice("var", "let")),
    wildcard_pattern: ($) => "_",
    modifiers: ($) =>
      repeat1(
        prec.left(
          choice($._non_local_scope_modifier, $._locally_permitted_modifiers)
        )
      ),
    _locally_permitted_modifiers: ($) =>
      repeat1(choice($.attribute, $._locally_permitted_modifier)),
    parameter_modifiers: ($) => repeat1($.parameter_modifier),
    property_behavior_modifier: ($) => "lazy",
    function_modifier: ($) => choice("infix", "postfix", "prefix"),
